docs/模组/fabric/1.18.2/辅助类/优化补丁.md
# 优化补丁

## 重量级

### 重量级：综合

| 英文名（CurseForge）                                                                                    | 中文名（MCMOD）                                    | 相关链接                                               | 备注             |
| ------------------------------------------------------------------------------------------------------- | -------------------------------------------------- | ------------------------------------------------------ | ---------------- |
| [Lithium (Fabric)](https://www.curseforge.com/minecraft/mc-mods/lithium)                                | [锂](https://www.mcmod.cn/class/2292.html)         | [Modrinth](https://modrinth.com/mod/lithium)           | 计算方法优化     |
| [FerriteCore (Fabric)](https://www.curseforge.com/minecraft/mc-mods/ferritecore-fabric)                 | [铁氧体磁芯](https://www.mcmod.cn/class/3888.html) | [Modrinth](https://modrinth.com/mod/ferrite-core)      | 减少内存占用     |
| [Smooth Boot (Fabric)](https://www.curseforge.com/minecraft/mc-mods/smooth-boot)                        | [流畅加载](https://www.mcmod.cn/class/3422.html)   | [Modrinth](https://modrinth.com/mod/smoothboot-fabric) | 优化游戏加载时间 |
| [Krypton](https://www.curseforge.com/minecraft/mc-mods/krypton)                                         | [氪](https://www.mcmod.cn/class/3399.html)         | [Modrinth](https://modrinth.com/mod/krypton)           | 优化网络堆栈     |
| [Concurrent Chunk Management Engine (Fabric)](https://www.curseforge.com/minecraft/mc-mods/c2me-fabric) | [C^2M 引擎](https://www.mcmod.cn/class/3511.html)  | [Modrinth](https://modrinth.com/mod/c2me-fabric)       | 提高区块的性能   |
| [Farsight [Fabric]](https://www.curseforge.com/minecraft/mc-mods/farsight-fabric)                       | [Farsight](https://www.mcmod.cn/class/5224.html)   |                                                        |                  |

### 重量级：渲染

| 英文名（CurseForge）                                                                                                        | 中文名（MCMOD）                                                       | 相关链接                                                                  | 备注                   |
| --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- | ------------------------------------------------------------------------- | ---------------------- |
| [Sodium](https://www.curseforge.com/minecraft/mc-mods/sodium)                                                               | [钠](https://www.mcmod.cn/class/2785.html)                            | [Modrinth](https://modrinth.com/mod/sodium)                               | 渲染引擎优化           |
| > [Indium](https://www.curseforge.com/minecraft/mc-mods/indium)                                                             | [铟](https://www.mcmod.cn/class/3413.html)                            | [Modrinth](https://modrinth.com/mod/indium)                               |                        |
| > [Sodium Shadowy Path Blocks](https://www.curseforge.com/minecraft/mc-mods/sodium-shadowy-path-blocks)                     | [钠 · 土径阴影](https://www.mcmod.cn/class/5654.html)                 | [Modrinth](https://modrinth.com/mod/sodium-shadowy-path-blocks)           |                        |
| > [Sodium Extra](https://www.curseforge.com/minecraft/mc-mods/sodium-extra)                                                 | [钠 · 扩展](https://www.mcmod.cn/class/3701.html)                     | [Modrinth](https://modrinth.com/mod/sodium-extra)                         |                        |
| > [Reese's Sodium Options](https://www.curseforge.com/minecraft/mc-mods/reeses-sodium-options)                              | [Reese的钠视频界面](https://www.mcmod.cn/class/4905.html)             | [Modrinth](https://modrinth.com/mod/reeses-sodium-options)                |                        |
| > [Unofficial Sodium Biome Blending Fix](https://www.curseforge.com/minecraft/mc-mods/unofficial-sodium-biome-blending-fix) |                                                                       | [Modrinth](https://modrinth.com/mod/unofficial-sodium-biome-blending-fix) |                        |
| [Iris Shaders](https://www.curseforge.com/minecraft/mc-mods/irisshaders)                                                    | [Iris Shaders](https://www.mcmod.cn/class/3697.html)                  | [Modrinth](https://modrinth.com/mod/iris)                                 |                        |
| > [Iris & Oculus Flywheel Compat](https://www.curseforge.com/minecraft/mc-mods/iris-flywheel-compat)                        | [Iris & Oculus Flywheel Compat](https://www.mcmod.cn/class/7283.html) |                                                                           | 增加与 Flywheel 兼容性 |

### 重量级：光照

| 英文名（CurseForge）                                                         | 中文名（MCMOD）                              | 相关链接                                       | 备注             |
| ---------------------------------------------------------------------------- | -------------------------------------------- | ---------------------------------------------- | ---------------- |
| [Starlight (Fabric)](https://www.curseforge.com/minecraft/mc-mods/starlight) | [星光](https://www.mcmod.cn/class/3303.html) | [Modrinth](https://modrinth.com/mod/starlight) | 重写原版光照系统 |
| [Phosphor (Fabric)](https://www.curseforge.com/minecraft/mc-mods/phosphor)   | [磷](https://www.mcmod.cn/class/1766.html)   | [Modrinth](https://modrinth.com/mod/phosphor)  | 照明引擎优化     |

## 轻量级

### 轻量级：综合

| 英文名（CurseForge）                                                                               | 中文名（MCMOD）                                              | 相关链接                                                  | 备注                              |
| -------------------------------------------------------------------------------------------------- | ------------------------------------------------------------ | --------------------------------------------------------- | --------------------------------- |
| [Not Enough Crashes (Fabric)](https://www.curseforge.com/minecraft/mc-mods/not-enough-crashes)     | [崩溃优化](https://www.mcmod.cn/class/2441.html)             | [Modrinth](https://modrinth.com/mod/notenoughcrashes)     |                                   |
| [LazyDFU](https://www.curseforge.com/minecraft/mc-mods/lazydfu)                                    | [DFU载入优化](https://www.mcmod.cn/class/3407.html)          | [Modrinth](https://modrinth.com/mod/lazydfu)              |                                   |
| [lazy-language-loader (Fabric)](https://www.curseforge.com/minecraft/mc-mods/lazy-language-loader) | [Lazy language loader](https://www.mcmod.cn/class/4836.html) | [Modrinth](https://modrinth.com/mod/lazy-language-loader) |                                   |
| [Language Reload](https://www.curseforge.com/minecraft/mc-mods/language-reload)                    | [Language Reload](https://www.mcmod.cn/class/6596.html)      | [Modrinth](https://modrinth.com/mod/language-reload)      |                                   |
| [Better Biome Blend](https://www.curseforge.com/minecraft/mc-mods/better-biome-blend)              | [Better Biome Blend](https://www.mcmod.cn/class/6107.html)   | [Modrinth](https://modrinth.com/mod/better-biome-blend)   | 生物群系过渡算法优化              |
| [Very Many Players (Fabric)](https://www.curseforge.com/minecraft/mc-mods/vmp-fabric)              | [Very Many Players](https://www.mcmod.cn/class/6473.html)    | [Modrinth](https://modrinth.com/mod/vmp-fabric)           | 优化服务器玩家较多时的性能        |
| [Ksyxis](https://www.curseforge.com/minecraft/mc-mods/ksyxis)                                      | [Ksyxis](https://www.mcmod.cn/class/5104.html)               | [Modrinth](https://modrinth.com/mod/ksyxis)               | 加载地图时不加载原版的 441 个区块 |
| [Fastload](https://www.curseforge.com/minecraft/mc-mods/fastload)                                  | [Fastload](https://www.mcmod.cn/class/7602.html)             | [Modrinth](https://modrinth.com/mod/fastload)             | 类似 Ksyxis，但实现方式更安全     |
| [Clumps](https://www.curseforge.com/minecraft/mc-mods/clumps)                                      | [经验机制改革](https://www.mcmod.cn/class/1499.html)         | [Modrinth](https://modrinth.com/mod/clumps)               |                                   |
| [FixMySpawnR](https://www.curseforge.com/minecraft/mc-mods/fixmyspawnr)                            | [FixMySpawnR](https://www.mcmod.cn/class/7127.html)          |                                                           | 减少一半由刷怪笼引起的 TPS 延迟   |
| [Alternate Current](https://www.curseforge.com/minecraft/mc-mods/alternate-current)                | [Alternate Current](https://www.mcmod.cn/class/7121.html)    | [Modrinth](https://modrinth.com/mod/alternate-current)    | 红石粉优化                        |
| [ModernFix](https://www.curseforge.com/minecraft/mc-mods/modernfix)                                | [现代化修复](https://www.mcmod.cn/class/8714.html)           | [Modrinth](https://modrinth.com/mod/modernfix)            | 优化启动和世界加载的时间          |

### 轻量级：修复

| 英文名（CurseForge）                                                                                      | 中文名（MCMOD）                                                      | 相关链接                                                          | 备注                          |
| --------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- | ----------------------------------------------------------------- | ----------------------------- |
| [No Null Processors](https://www.curseforge.com/minecraft/mc-mods/no-null-processors)                     | [No Null Processors](https://www.mcmod.cn/class/5585.html)           |                                                                   | 解决预生成器出现的问题        |
| [Feature NBT Deadlock Be Gone](https://www.curseforge.com/minecraft/mc-mods/feature-nbt-deadlock-be-gone) | [Feature NBT Deadlock Be Gone](https://www.mcmod.cn/class/5838.html) | [Modrinth](https://modrinth.com/mod/feature-nbt-deadlock-be-gone) | 解决世界生成时 NBT 造成的死锁 |
| [XL Packets Fabric](https://www.curseforge.com/minecraft/mc-mods/xl-packets-fabric)                       | [XL数据包](https://www.mcmod.cn/class/4559.html)                     |                                                                   | 包大小限制提升到 2GB          |
| [MemoryLeakFix](https://www.curseforge.com/minecraft/mc-mods/memoryleakfix)                               | [Memory Leak Fix](https://www.mcmod.cn/class/6593.html)              | [Modrinth](https://modrinth.com/mod/memoryleakfix)                | 内存泄漏修复                  |
| [Debugify](https://www.curseforge.com/minecraft/mc-mods/debugify)                                         | [Debugify](https://www.mcmod.cn/class/6178.html)                     | [Modrinth](https://modrinth.com/mod/debugify)                     |                               |
| [Thorium](https://www.curseforge.com/minecraft/mc-mods/thorium)                                           | [钍](https://www.mcmod.cn/class/5909.html)                           | [Modrinth](https://modrinth.com/mod/thorium)                      |                               |
| [Dimension Fix](https://www.curseforge.com/minecraft/mc-mods/dimension-fix-some-forge-patches-ported)     |                                                                      |                                                                   |                               |
| [Fix Experience Bug](https://www.curseforge.com/minecraft/mc-mods/fix-experience-bug)                     | [Fix Experience Bug](https://www.mcmod.cn/class/7616.html)           |                                                                   |                               |
| [DEUF Refabricated](https://www.curseforge.com/minecraft/mc-mods/deuf-refabricated)                       | [DEUF Refabricated](https://www.mcmod.cn/class/11228.html)           |                                                                   |                               |

### 轻量级：配方

| 英文名（CurseForge）                                                                            | 中文名（MCMOD）                                                | 相关链接 | 备注               |
| ----------------------------------------------------------------------------------------------- | -------------------------------------------------------------- | -------- | ------------------ |
| [FastBench for Fabric](https://www.curseforge.com/minecraft/mc-mods/fastbench-for-fabric)       | [工作台性能优化Fabric版](https://www.mcmod.cn/class/5403.html) |          |                    |
| [Fast Furnace for Fabric](https://www.curseforge.com/minecraft/mc-mods/fast-furnace-for-fabric) | [熔炉性能优化Fabric版](https://www.mcmod.cn/class/3079.html)   |          |                    |
| [Recipe Cache](https://www.curseforge.com/minecraft/mc-mods/recipe-cache)                       | [配方缓存](https://www.mcmod.cn/class/8086.html)               |          | 与上面这两个不兼容 |

### 轻量级：渲染

| 英文名（CurseForge）                                                                      | 中文名（MCMOD）                                            | 相关链接                                               | 备注                                                        |
| ----------------------------------------------------------------------------------------- | ---------------------------------------------------------- | ------------------------------------------------------ | ----------------------------------------------------------- |
| [Entity Culling Fabric/Forge](https://www.curseforge.com/minecraft/mc-mods/entityculling) | [实体渲染机制优化](https://www.mcmod.cn/class/3629.html)   | [Modrinth](https://modrinth.com/mod/entityculling)     |                                                             |
| [Item Model Fix (Fabric)](https://www.curseforge.com/minecraft/mc-mods/item-model-fix)    | [物品模型修复](https://www.mcmod.cn/class/3845.html)       | [Modrinth](https://modrinth.com/mod/item-model-fix)    |                                                             |
| [Cull Leaves](https://www.curseforge.com/minecraft/mc-mods/cull-leaves)                   | [树叶渲染优化](https://www.mcmod.cn/class/4414.html)       | [Modrinth](https://modrinth.com/mod/cull-leaves)       |                                                             |
| [Cull Less Leaves](https://www.curseforge.com/minecraft/mc-mods/cull-less-leaves)         | [更好的树叶渲染优化](https://www.mcmod.cn/class/6460.html) | [Modrinth](https://modrinth.com/mod/cull-less-leaves)  | [树叶渲染优化](https://www.mcmod.cn/class/4414.html) 改进版 |
| [Better Beds](https://www.curseforge.com/minecraft/mc-mods/better-beds)                   | [更好的床](https://www.mcmod.cn/class/4356.html)           | [Modrinth](https://modrinth.com/mod/better-beds)       |                                                             |
| [Smoke Suppression](https://www.curseforge.com/minecraft/mc-mods/smoke-suppression)       |                                                            | [Modrinth](https://modrinth.com/mod/smoke-suppression) | 大量篝火造成的延迟                                          |
| [Distant Horizons](https://www.curseforge.com/minecraft/mc-mods/distant-horizons)         | [Distant Horizons](https://www.mcmod.cn/class/5009.html)   | [Modrinth](https://modrinth.com/mod/distanthorizons)   |                                                             |
| [ImmediatelyFast](https://www.curseforge.com/minecraft/mc-mods/immediatelyfast)           | [ImmediatelyFast](https://www.mcmod.cn/class/7948.html)    | [Modrinth](https://modrinth.com/mod/immediatelyfast)   |                                                             |

## 试验性

| 英文名（CurseForge）                                                      | 中文名（MCMOD）                                          | 相关链接                                                          | 备注           |
| ------------------------------------------------------------------------- | -------------------------------------------------------- | ----------------------------------------------------------------- | -------------- |
| [DashLoader](https://www.curseforge.com/minecraft/mc-mods/dashloader)     | [疾速加载](https://www.mcmod.cn/class/3841.html)         | [Modrinth](https://modrinth.com/mod/dashloader)                   |                |
| Dimensional Threading                                                     |                                                          | [GitHub](https://github.com/WearBlackAllDay/DimensionalThreading) | 维度线程化     |
| [MCMTFabricCE](https://www.curseforge.com/minecraft/mc-mods/mcmtfabricce) | [MCMTFabricCE](https://www.mcmod.cn/class/6413.html)     | [Modrinth](https://modrinth.com/mod/mcmtce)                       |                |
| [C3H6N6O6](https://www.curseforge.com/minecraft/mc-mods/c3h6n6o6)         | [环三亚甲基三硝胺](https://www.mcmod.cn/class/6841.html) | [Modrinth](https://modrinth.com/mod/c3h6n6o6)                     | 实体多线程运算 |
| [Exordium](https://www.curseforge.com/minecraft/mc-mods/exordium)         | [Exordium](https://www.mcmod.cn/class/7540.html)         | [Modrinth](https://modrinth.com/mod/exordium)                     |                |
